src/z80asm/z80asm2/t/20-preproc/expected/include_03.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/include_03.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/include_03.asm...
t/20-preproc/input/include_03.asm:1:30: error: Unexpected token after INCLUDE: extra
    include "file_not_found.inc" extra
                                 ^
